src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__delete_confirm__tests__draw_blocks_delete_custom_keymap_one_definition.snap
---
source: src/ui/draw_blocks/delete_confirm.rs
expression: setup.terminal.backend()
---
"                                                                                  "
"        ╭──────────────────────── Confirm Delete ────────────────────────╮        "
"        │                                                                │        "
"        │     Are you sure you want to delete container: container_1     │        "
"        │                                                                │        "
"        │      ╭─────────────────────╮      ╭─────────────────────╮      │        "
"        │      │     ( End ) no      │      │     ( F10 ) yes     │      │        "
"        │      ╰─────────────────────╯      ╰─────────────────────╯      │        "
"        ╰────────────────────────────────────────────────────────────────╯        "
"                                                                                  "
