src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__delete_confirm__tests__draw_blocks_delete_multiple.snap
---
source: src/ui/draw_blocks/delete_confirm.rs
expression: setup.terminal.backend()
---
"                                                                                  "
"             ╭─────────────────── Confirm Delete ───────────────────╮             "
"             │                                                      │             "
"             │     Are you sure you want to delete 3 containers     │             "
"             │                                                      │             "
"             │     ╭─────────────────╮      ╭─────────────────╮     │             "
"             │     │    ( n ) no     │      │    ( y ) yes    │     │             "
"             │     ╰─────────────────╯      ╰─────────────────╯     │             "
"             ╰──────────────────────────────────────────────────────╯             "
"                                                                                  "
